[GL-7695] fix design collapse on initial topics pag

--- a/app/static_src/less/pages/topic.less
+++ b/app/static_src/less/pages/topic.less
@@ -16,6 +16,7 @@
       align-items: center;
       .searchBox {
         flex: 1;
+        display: block;
       }
       &-add {
         padding: 0 0 0 10px;
